--- a/certifications.html
+++ b/certifications.html
@@ -18,38 +18,37 @@
 <body>
 
     <!-- Certifications Section -->
+    <!-- Add this to the Certifications Section -->
     <section id="certifications" class="section">
-        <h2 class="title">Certifications</h2>
-        <!-- Filter Controls (to be implemented in JavaScript) -->
-        <div>
-            <label for="filter">Filter by Certification Body:</label>
-            <select id="filter">
-                <option value="all">All</option>
-                <option value="certificationBody1">Certification Body 1</option>
-                <option value="certificationBody2">Certification Body 2</option>
-                <!-- Add more options for each certification body -->
-            </select>
+        <!-- Vendor Filter Dropdown -->
+        <!-- ... (unchanged) -->
+
+        <!-- Certification Cards Container -->
+        <div id="certifications-container" class="columns is-multiline">
+            <!-- Certification cards will be dynamically added here -->
         </div>
 
-        <div class="columns is-multiline">
-            <!-- Certification Cards (to be populated dynamically in JavaScript) -->
-            <!-- Example Certification Card 1 -->
-            <div class="column is-half certification-card" data-certification-body="certificationBody1">
-                <!-- Certification Card Content (similar to the previous structure) -->
-                <!-- ... -->
-            </div>
+        <!-- Certificate Counts -->
+        <div class="has-text-centered">
+            <div class="vendor-count-container" data-vendor="vendor1">
+                <!-- Vendor Icon -->
+                <span class="icon is-large vendor-icon">
+                    <!-- Replace 'your-icon' with the actual class or SVG for the vendor icon -->
+                    <img src="/dist/assets/udemy.svg" alt="">
+                </span>
 
-            <!-- Example Certification Card 2 -->
-            <div class="column is-half certification-card" data-certification-body="certificationBody2">
-                <!-- Certification Card Content (similar to the previous structure) -->
-                <!-- ... -->
-            </div>
+                <!-- Vendor Name -->
+                <p class="vendor-name">Vendor 1</p>
 
-            <!-- Add more certification cards as needed -->
+                <!-- Certificate Count -->
+                <p class="certificate-count">Certificates: <span>0</span></p>
+            </div>
+            <!-- Add more vendor count containers as needed -->
         </div>
-    </section>
 
-    <!-- Include your other page content or sections -->
+        <!-- Link to Certifications Page at the Bottom -->
+        <!-- ... (unchanged) -->
+    </section <!-- Include your other page content or sections -->
 
 </body>
 
